--- a/app/views/users/_login.erb
+++ b/app/views/users/_login.erb
@@ -1,5 +1,5 @@
 <form action="/users/login" method="post">
   <input type="text" name="email" placeholder="Email"/>
-  <input type="password" name="password_info" placeholder="Password"/>
+  <input type="password" name="password" placeholder="Password"/>
   <input type="submit" value="Log In"/>
 </form>
