--- a/app/views/users/_signup.erb
+++ b/app/views/users/_signup.erb
@@ -1,5 +1,5 @@
 <form action="/users" method="post">
-  <input type="text" name="username" placeholder="Username"/>
-  <input type="password" name="password_info" placeholder="Password"/>
+  <input type="text" name="email" placeholder="Email"/>
+  <input type="password" name="password " placeholder="Password"/>
   <input type="submit" value="Sign Up"/>
 </form>
