--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/trg.css">
   <link rel="stylesheet" href="/css/application.css">
-  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <link rel="import" href="hello-world.html">
+  <!-- <link rel="import" href="hello-world.html"> -->
 
   <title></title>
 </head>
