--- a/app/views/partials/_add_task.erb
+++ b/app/views/partials/_add_task.erb
@@ -1,3 +1,4 @@
-<form action='/tasks/new' method='get' class="debug">
-    <input type="submit" value="Add Task"/>
+<form action='/tasks/new' method='get' class="fl-r debug">
+  <input type="hidden" name="project_id" value="params[:id]"/>
+  <input type="submit" value="Add Task"/>
 </form>
