add everything but styling and add task ajax

--- a/app/views/partials/_list_tasks.erb
+++ b/app/views/partials/_list_tasks.erb
@@ -1,5 +1,3 @@
 <% tasks.each do |task| %>
-<li class="debug">
-    <%= task["title"] %>
-</li>
+  <%= erb :"partials/_small_task", locals:{ task_id: task["id"], title: task["title"], detail: task["description"] } %>
 <% end %>
