--- a/app/views/partials/_new_task.erb
+++ b/app/views/partials/_new_task.erb
@@ -1,5 +1,5 @@
-<form action='projects/<%= params[:id] %>/tasks' method='post'>
-  <input type="text" name="section" placeholder="Section"/>
+<form action='/projects/<%= params[:id] %>/tasks' method='post' id="taskform">
+  <input type="text" name="stage" placeholder="Stage"/>
   <input type='text' name='title' placeholder='Title'/>
   <textarea name='description' placeholder='Description'></textarea>
   <input type='submit' value='Submit'/>
