add incomplete task ajax, fix broken item styling on drag and drop

--- a/app/views/partials/_add_task.erb
+++ b/app/views/partials/_add_task.erb
@@ -1,4 +1,4 @@
-<form action="/projects/<%=project_id%>/tasks/new" method='get' id="addtask" class="fl-r debug">
+<form action="/projects/<%=project_id%>/tasks/new" method='get' class="fl-r debug">
   <input type="hidden" name="project_id" value="params[:id]"/>
-  <input type="submit" value="Add Task"/>
+  <input id="addTask" type="button" value="Add Task"/>
 </form>
