--- a/app/views/show_project.erb
+++ b/app/views/show_project.erb
@@ -45,11 +45,16 @@
         <%= erb :"/partials/_add_task", locals: {project_id: params[:id] } %>
 
         <div id="taskform" class="debug" style="display: none">
-            <form action='/projects/<%= params[:id] %>/tasks' method='post'>
-              <input type="text" name="stage" placeholder="Stage"/>
-              <input type='text' name='title' placeholder='Title'/>
-              <textarea name='description' placeholder='Description'></textarea>
-              <input type='submit' value='Submit'/>
+            <form action='/projects/<%= params[:id] %>/tasks' method='post' id="taskroute">
+                <select name="stage">
+                  <option value="Icebox">Icebox</option>
+                  <option value="Development">Development</option>
+                  <option value="Testing">Testing</option>
+                  <option value="Deployed">Deployed</option>
+                </select>
+                <input type='text' name='title' placeholder='Title'/>
+                <textarea name='description' placeholder='Description'></textarea>
+                <input type='submit' value='Submit'/>
             </form>
         </div>
     </main>
