--- a/app/views/show_project.erb
+++ b/app/views/show_project.erb
@@ -1,4 +1,3 @@
-<hello-world></hello-world>
 <div class="debug">
 
 
@@ -55,7 +54,7 @@
                 </select>
                 <input type='text' name='title' placeholder='Title'/>
                 <textarea name='description' placeholder='Description'></textarea>
-                <input type='submit' value='Submit'/>
+                <input type='submit' value='Submit' class="createtask"/>
             </form>
         </div>
     </main>
